fixed issue where tapping a link shifted entire page upwards + navbar changes
to recreate on old versions:
1. add the site to your iphone homescreen
2. click on any link other than navbar items
3. you'll noticed the entire page is shifted up upon returning

that's fixed now by using target="_blank" on every link

oh and also navbar changes that dont require us to use "margin-bottom" anymore

--- a/ciabi-web/static/shared.css
+++ b/ciabi-web/static/shared.css
@@ -31,6 +31,7 @@
 	--navbar-lift: 1rem;
 	--navbar-height: 80px;
 	--mobile-navbar-height: 64px;
+	--navbar-inner-padding: 4px;
 	--navbar-highlight: #ffffff;
 	--padding: 15px;
 	--actions-and-stuff-ahh-transition: cubic-bezier(0.68, -0.6, 0.32, 1.6);
@@ -86,6 +87,8 @@ body {
 body {
 	/* 4. Add accessible line-height */
 	line-height: 1.5;
+	    min-height: -webkit-fill-available;
+
 	/* 5. Improve text rendering */
 	-webkit-font-smoothing: antialiased;
 }
@@ -562,7 +565,6 @@ a:hover {
 	overflow-y: auto;
 	width: 100%;
 	height: 100vh;
-	margin-bottom: calc(var(--navbar-height));
 }
 
 .center-container {
@@ -655,9 +657,6 @@ a:hover {
 
 
 @media only screen and (max-width: 600px) {
-	.loaf {
-		margin-bottom: var(--mobile-navbar-height);
-	}
 
 	:root {
 		font-size: 14px;
@@ -668,10 +667,6 @@ a:hover {
 
 	.h300::after {
 		content: ' (scroll)';
-	}
-
-	.loaf {
-		margin-bottom: calc(var(--mobile-navbar-height));
 	}
 
 	:root {
